skeplib/tests/fixtures/sema/valid/modulo_and_unary_plus.sk
fn main() -> Int {
  let a: Int = +17 % 5;
  let b: Float = +2.5;
  if (b == 2.5) {
    return a;
  }
  return 0;
}
