skeplib/tests/fixtures/sema/invalid/vec_delete_index_type.sk
import vec;

fn main() -> Int {
  let xs: Vec[Int] = vec.new();
  let _x = vec.delete(xs, "0");
  return 0;
}
